# Media_Center

./: .dockerignore  .env.example  .gitignore  .gitkeep  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml  pull_request_template.md
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  CHAOS_TESTING.md  CODE_STYLE.md  COMPLIANCE.md  COUNCIL_GUIDE.md  DATA_MODEL.md  DEVELOPMENT_PLAN.md  DISASTER_RECOVERY.md  ECONOMICS.md  FAQ.md  GLOSSARY.md  GOVERNANCE.md  KNOWLEDGE_BASE.md  LOAD_TESTING.md  MASTER_PLAN.md  MINIMAL_PRODUCTION_RESOURCES.md  MULTITENANT_SCALING.md  OPERATIONS_MANUAL.md  PILOT_RETROSPECTIVE_SCALE_PLAN.md  PILOT_SUPPORT_RUNBOOK.md  PILOT_TENANT_ONBOARDING.md  REPOSITORY_STRUCTURE.md  REQUIREMENTS.md  RISK_REGISTER.md  ROADMAP.md  S2S_AUTH.md  SECURITY.md  SECURITY_PENTEST_ISSUE_86.md  SERVICE_DISCOVERY.md  SRE_RUNBOOK.md  STAGE_0_ACCEPTANCE.md  STAGE_1_ACCEPTANCE.md  STAGE_2_ACCEPTANCE.md  STAGE_3_ACCEPTANCE.md  STAGE_4_ACCEPTANCE.md  STAGE_5_ACCEPTANCE.md  STAGE_6_ACCEPTANCE.md  STAGE_7_ACCEPTANCE.md  STAGE_8_ACCEPTANCE.md  STAGE_9_ACCEPTANCE.md  (+6 more)
examples/: analytics_dashboard_demo.py  council_panel_demo.py  onboarding_demo.py  telegram_client_demo.py  web_cabinet_demo.py
experiments/: create_issues.py  create_labels.sh  create_milestones.sh  create_stage9_issues.py  extract_mhtml.py  gen_dev_plan.py  gen_module_docs.py  issue_map.json  issue_map_stage9.json  plan2_data.py  plan_data.py  telegram_client_smoke.py  telegram_leak_scan_flaky_repro.py  validate_issue10_local_env.sh  validate_issue213_plan2.sh  validate_issue248_helm.sh  validate_issue5_docs.sh  validate_issue6_adr.sh  validate_issue79_blockchain_network.sh  validate_issue7_data_model.sh  validate_issue85_load_targets.py  validate_issue8_repo_structure.sh  validate_issue9_ci.sh
infra/: README.md
libs/: README.md  __init__.py
services/: README.md
tests/: test_activity_command_center_api.py  test_activity_command_center_epic_acceptance_contract.py  test_analytics_dashboard_issue69_acceptance_contract.py  test_analytics_engine_issue61_acceptance_contract.py  test_api_gateway_routing.py  test_asgi_entrypoint_issue224.py  test_auth_service.py  test_backup_dr_issue99_acceptance_contract.py  test_base_runtime_epic_issue225_contract.py  test_base_server_issue217.py  test_base_server_issue219.py  test_base_server_issue220.py  test_base_server_issue222.py  test_blockchain_auditor_api.py  test_blockchain_auditor_connector.py  test_blockchain_auditor_epic_acceptance_contract.py  test_build_info_image_metadata_issue229_contract.py  test_cache_layer.py  test_cglr_api.py  test_cglr_epic_acceptance_contract.py  test_cglr_link_rotator.py  test_cglr_template_engine.py  test_chaos_resilience_issue89_contract.py  test_ci_contract.py  test_code_standards_contract.py  test_competitive_metrics_matrix_issue253_contract.py  test_compliance_issue87_contract.py  test_compliance_risk_register_contract.py  test_config_settings.py  test_container_artifact_layout_issue230_contract.py  test_container_entrypoint_issue231_contract.py  test_container_healthcheck_issue228_contract.py  test_container_size_budget_issue232_contract.py  test_contribution_events.py  (+99 more)
(+257 files in other folders)
