[project]
name = "media-center"
version = "0.0.0"
description = "Planning-stage monorepo for the Media Center platform"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
dependencies = []

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [
  "experiments/*.py",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = [
  "^experiments/",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = [
  "--strict-config",
  "--strict-markers",
]
