[project]
name = "media-center"
version = "0.0.0"
description = "Planning-stage monorepo for the Media Center platform"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
dependencies = [
  "SQLAlchemy==2.0.51",
  "asyncpg==0.31.0",
  "alembic==1.18.4",
  "redis==8.0.0",
  "aio-pika==9.6.2",
  "chromadb-client==1.5.9",
  "boto3==1.43.32",
]

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [
  "experiments/*.py",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.black]
target-version = [
  "py313",
]
line-length = 88
extend-exclude = '''
^/experiments/
'''

[tool.mypy]
python_version = "3.13"
strict = true
exclude = [
  "^experiments/",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
pythonpath = [
  ".",
]
addopts = [
  "--strict-config",
  "--strict-markers",
]
