[project]
name = "media-center"
version = "0.0.0"
description = "Planning-stage monorepo for the Media Center platform"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
dependencies = [
  "fastapi==0.137.2",
  "uvicorn==0.49.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.1",
  "SQLAlchemy==2.0.51",
  "asyncpg==0.31.0",
  "alembic==1.18.4",
  "redis==8.0.0",
  "aio-pika==9.6.2",
  "httpx==0.28.1",
  "Jinja2==3.1.6",
  "cryptography==49.0.0",
  "chromadb-client==1.5.9",
  "boto3==1.43.32",
]

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [
  "experiments/*.py",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.black]
target-version = [
  "py313",
]
line-length = 88
extend-exclude = '''
^/experiments/
'''

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = [
  "$MYPY_CONFIG_FILE_DIR/services/activity-command-center",
  "$MYPY_CONFIG_FILE_DIR/services/cglr",
  "$MYPY_CONFIG_FILE_DIR/services/blockchain-auditor",
  "$MYPY_CONFIG_FILE_DIR/services/contribution-ledger",
  "$MYPY_CONFIG_FILE_DIR/services/hitl-payout-gateway",
  "$MYPY_CONFIG_FILE_DIR/services/messenger-adapter",
  "$MYPY_CONFIG_FILE_DIR/services/neuro-agent-orchestrator",
]
exclude = [
  "^experiments/",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
pythonpath = [
  ".",
  "services/activity-command-center",
  "services/cglr",
  "services/blockchain-auditor",
  "services/contribution-ledger",
  "services/hitl-payout-gateway",
  "services/messenger-adapter",
  "services/neuro-agent-orchestrator",
]
addopts = [
  "--strict-config",
  "--strict-markers",
]
